2005-02-08 nalin
	* src/acct.c: treat a KRB5KDC_ERR_PREAUTH_FAILED error as if it were
	a KRB5KRB_AP_ERR_BAD_INTEGRITY error.
	* README,src/pam_krb5.5.in,src/pam_krb5.8.in: doc updates.

2005-02-08 nalin
	* src/userinfo.c,src/userinfo.h: look up and make note of the user's
	home directory.
	* src/tokens.c(tokens_obtain): attempt to determine the cell in which
	the user's home directory resides, and default to obtaining tokens for
	that cell as well, unless it's the same as the default cell.  Skip
	cells given to the afs_cells option if they are the same as either the
	local cell or the user's home cell.
	* src/options.c: handle "external" like we handle "use_shmem".
	* src/stash.c: read a krbtgt key from $KRB5CCNAME if "external" was
	set.  Try to reuse the passed-in krb5_context, if possible.
	* src/session.c: don't create new ccache or ticket files if KRB5CCNAME
	or KRBTKFILE are already set in the PAM environment, respectively.

2005-02-07 nalin
	* src/minikafs.c(minikafs_5log): initialize use_ccache as a handle for
	the default cred cache, not ccache, when ccache is NULL.
	* src/options.c(option_t): add, for parsing a value as a krb5_deltat if
	it can't be parsed as a normal integer.
	* src/options.h: change normal and renewable lifetimes to krb5_deltat
	* src/options.c(_pam_krb5_options_init): parse lifetimes using option_t
	instead of option_i.
	* src/*.c: random signed/unsigned warning corrections.

2004-09-13 nalin
	* src/tokens.c: skip getting tokens for the cell of /afs if that cell
	is "dynroot", which is what OpenAFS's dynamic-root support gives us.
	* src/auth.c: run the krb5_kuserok() check in the authentication phase
	as well (Douglas E. Engert).

2004-09-02 nalin
	* src/minikafs.c: add copyright statement because the ioctl patch is
	too much like heimdal's implementation.

2004-08-31 nalin
	* src/shmem.c,src/shmem.h: add, several functions for handling shared
	memory.
	* src/auth.c:(pam_sm_authenticate): log the realm as well. store