@@ -1,4 +1,9 @@
 2005-02-08 nalin
+	* src/afs5log.c: properly screen out "dynroot" as a cell name, walk up
+	from the user's home directory if we can't determine in which cell it
+	is that it resides
+
+2005-02-08 nalin
 	* src/acct.c: treat a KRB5KDC_ERR_PREAUTH_FAILED error as if it were
 	a KRB5KRB_AP_ERR_BAD_INTEGRITY error.
 	* README,src/pam_krb5.5.in,src/pam_krb5.8.in: doc updates.
